--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,10 +37,12 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.work:work-runtime-ktx:2.4.0"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation "androidx.work:work-testing:2.4.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 }
